tests/kiama/negative/type_errors/L1/7_badeq4.ob
MODULE badeq;

VAR
    bvar : BOOLEAN;

BEGIN
    bvar := bvar # FALSE
END badeq.
